--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="container ">
             <nav class="navbar navbar-expand-lg navbar-light ">
                 <div class="container-fluid">
-                <a class="navbar-brand " href="#"><img src="Images/Group 33072.png" alt="" style="max-width: 300px;"></a>
+                <a class="navbar-brand " href="#"><img src="Group 33072.png" alt="" style="max-width: 300px;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
